--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -3,4 +3,4 @@
   = link_to 'New Event', new_event_path
 
 - @events.each do |event|
-  = event.name
+  = link_to event.name, event_path, :id => event.id
