--- a/app/views/events/edit.html.haml
+++ b/app/views/events/edit.html.haml
@@ -1,2 +1,17 @@
-<h1>Events#edit</h1>
-<p>Find me in app/views/events/edit.html.erb</p>
+%h1 Edit Event
+
+= form_tag :controller => :events, :action => :update, :method => "post"
+
+= label_tag :name, "Name"
+= text_field_tag :name, :value => @event.name
+
+= label_tag :user, "Users"
+= text_field_tag :users
+
+= label_tag :places, "Places"
+= text_field_tag :places
+
+= label_tag :dinners, "Dinners"
+= text_field_tag :dinners
+
+= submit_tag "Save"
