edit event add dinner

--- a/app/views/events/edit.html.haml
+++ b/app/views/events/edit.html.haml
@@ -7,4 +7,6 @@
 
   = link_to 'Add User', :controller => 'events', :action => 'add_user', :id => @event.id
 
+  = link_to 'Add Dinner', :controller => 'events', :action => 'add_dinner', :id => @event.id
+
   = event_form.submit 'Save'
