edit event add place

--- a/app/views/events/edit.html.haml
+++ b/app/views/events/edit.html.haml
@@ -9,4 +9,6 @@
 
   = link_to 'Add Dinner', :controller => 'events', :action => 'add_dinner', :id => @event.id
 
+  = link_to 'Add Place', :controller => 'events', :action => 'add_place', :id => @event.id
+
   = event_form.submit 'Save'
