--- a/app/views/events/edit.html.haml
+++ b/app/views/events/edit.html.haml
@@ -10,7 +10,7 @@
       %table
         %tr
           %td
-            user.name
+            = user.email
           %td
             = link_to "Remove", :controller => 'events', :action => 'remove_user', :event_id => @event.id, :user_id => user.id
 
