--- a/app/views/events/edit.html.haml
+++ b/app/views/events/edit.html.haml
@@ -12,7 +12,7 @@
           %td
             = user.email
           %td
-            = link_to "Remove", :controller => 'events', :action => 'remove_user', :event_id => @event.id, :user_id => user.id
+            = link_to "Remove", {:controller => 'events', :action => 'remove_user', :event_id => @event.id, :user_id => user.id }
 
   = link_to 'Add User', :controller => 'events', :action => 'add_user', :id => @event.id
 
