--- a/app/views/events/edit.html.haml
+++ b/app/views/events/edit.html.haml
@@ -38,4 +38,8 @@
 
   = link_to 'Add Place', :controller => 'events', :action => 'add_place', :id => @event.id
 
+  = link_to 'Add Comment', :controller => 'events', :action => 'add_comment', :id => @event.id
+
   = event_form.submit 'Save'
+
+
